# lizaalert_backend

./: .env.sample  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Dockerfile-dev  Dockerfile_base  Dockerfile_check  Dockerfile_func  Dockerfile_local  Dockerfile_test  Makefile  README.md  conftest.py  docker-compose.production.yml  docker-compose.s3.yml  docker-compose.test.yml  docker-compose.yml  keygen.py  pyproject.toml  pytest.ini  setup.cfg
.devcontainer/: devcontainer.json  docker-compose-dev.yml
.github/workflows/: deploy.yml  workflow.yml
docs/: Description_data_model.md  General_requirements_for_the_project_code.md  Principles_of_code_review.md  codestyle.md  creating_yandex_application.md  list_of_regions.csv  openapi_course.yaml  openapi_lizaalert.yaml  openapi_profile.yaml  poetry.md
lizaalert-backend/: .dockerignore  .env.sample  Dockerfile  conftest.py  entrypoint.sh  env.sample  gunicorn_conf.py  make_db_pg.py  pyproject.toml  pytest.ini  requirements.txt
lizaalert-backend/authentication/: adapters.py  admin.py  provider.py  serializers.py  urls.py  views.py
lizaalert-backend/courses/: admin.py  course_factory.py  models.py  pagination.py  serializers.py  urls.py  views.py
lizaalert-backend/courses/migrations/: 0001_initial.py  0002_course_user_created.py  0002_initial.py  0003_coursestatus.py  0004_alter_coursestatus_slug.py  0004_course_level.py  0005_chapter_lesson_chapterlesson_chapter_lessons_and_more.py
lizaalert-backend/requirements/: common.txt  dev.txt
lizaalert-backend/settings/: settings.py  urls.py
lizaalert-backend/tests/tests/: test_courses.py  test_user.py  test_users.py
lizaalert-backend/users/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  user_factory.py  views.py
lizaalert-backend/users/migrations/: 0001_initial.py  0002_alter_volunteercourse_status.py  0003_alter_volunteercourse_status.py  0004_alter_level_name.py  0004_auto_20220614_2156.py  0005_auto_20220709_2226.py  0005_auto_20220710_1321.py
s3_buckets/.minio.sys/: format.json
services/: wait_for_pg.py
services/base/: Dockerfile
services/ci/: Dockerfile
services/dev/: Dockerfile  wait_for_pg.py
services/local/: Dockerfile
services/nginx/: Dockerfile  la-testing_admin.conf  la-testing_api.conf  la-testing_docs.conf  la-testing_swagger.conf  local.Dockerfile  nginx.conf  site.conf
services/postgres/: Dockerfile  env.sample
src/: manage.py  pyproject.toml  pytest.ini  setup.cfg
src/lizaalert/authentication/: admin.py  context_processors.py  serializers.py  urls.py  utils.py  views.py
src/tests/: conftest.py  test_badges.py  test_courses.py  test_filters.py  test_homeworks.py  test_roles.py  test_users.py  test_volunteer_profile.py  test_webinars.py
tests/: conftest.py  test_courses.py  test_roles.py  test_users.py
tests/func/: conftest.py  test_test.py
tests/tests/: conftest.py  test_courses.py  test_roles.py  test_test.py  test_users.py
tests/user_fixtures/: course_fixtures.py  user_fixtures.py
(+200 files in other folders)
